# BallPitNDF

./: .gitignore  README.md  collect_demos.py  debug_main.py  env_steup.ipynb  gripper copy.ipynb  gripper.ipynb  hello_world.ipynb  main.ipynb  main.py  motion_planning.ipynb  motion_planning.py  pick_and_pour.py  pyproject.toml  requirements.txt  run_experiments.py
debug/: __init__.py  basket_demo.py  demo.py  make_sdf.py  visualize_utils.py
models/: ball.sdf  basket.sdf
notebooks/: diff_ik copy.ipynb  diff_ik.ipynb  env_steup copy.ipynb  env_steup.ipynb  panda_arm_hand.ipynb  pick_and_pour.ipynb
scripts/: get_demos.sh  get_lndf_sample_obj.sh  get_weights.sh  setup.sh
src/: __init__.py  diff_ik.py  panda_station.py  setup.py  station.py
src/assets/ball/: ball.sdf
src/assets/ballpit/: bin.sdf
src/assets/basket/: basket.mtl  basket.sdf
src/assets/bowl/: bowl.sdf
src/assets/mug/: mug.sdf
src/assets/panda_hand/: panda_hand.urdf
src/assets/sphere/: sphere.mtl  sphere.sdf  sphere_big.sdf  sphere_small.sdf
src/assets/table/: table.sdf
src/assets/wooden_basket/: wooden_basket.mtl  wooden_basket.sdf  wooden_basket_big.sdf
src/assets/wooden_basket_big_handle/: wooden_basket.mtl  wooden_basket.sdf
src/config/: demo.yaml  pouring.yaml
src/kinematics/: __init__.py  diff_ik.py  planner.py  trajectory.py
src/lndf_robot/opt/: optimizer_geom.py
src/modules/grasping/: grasper.py  pose_selector.py
src/modules/kinematics/: __init__.py  diff_ik.py  grasp_utils.py  (+2 more)
src/stations/: setup_demo_diagram.py  setup_diagram.py  setup_station.py  teleop_station.py
(+39 files in other folders)
