[tool.poetry]
name = "ballpitndf"
version = "0.1.0"
description = ""
authors = ["Eric Chen <deeplearningericchen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
drake = "^1.33.0"
ipykernel = "^6.29.5"
lxml = "^5.3.0"
numpy = "1.26.4"
yacs = "^0.1.8"
omegaconf = "^2.3.0"
torch = "^2.5.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
