[tool.poetry]
name = "ballpitndf"
version = "0.1.0"
description = ""
authors = ["Eric Chen <deeplearningericchen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
drake = "^1.33.0"
ipykernel = "^6.29.5"
transformers = "^4.46.3"
torchvision = "^0.20.1"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
